# lumerical-mcp

./: .env.example  .gitignore  GITHUB_UPLOAD_NOTES.md  README.md  pyproject.toml  server.py
examples/: codex_config.example.toml  create_demo_projects.py
examples/demo_projects/: demo_fdtd_si_nanoblock.fsp  demo_interconnect_laser_waveguide.icp  demo_mode_si_waveguide.lms
social_assets/: generate_multi_product_assets.py  xhs_multi_caption.txt
tools/: __init__.py  fdtd_worker.py  lumerical_bridge.py
