[project]
name = "lumerical-mcp"
version = "0.1.0"
description = "MCP server for controlling Ansys Lumerical FDTD, MODE, INTERCONNECT, and DEVICE through lumapi"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "numpy>=1.24",
]

[tool.uv]
package = false
